# Cerberus

./: .env.example  README.md  pyproject.toml  requirements.txt
config/: README.md
docs/: README.md  architecture.md  getting-started.md
src/cerberus/: __init__.py  hub.py  main.py
src/cerberus/guardians/: __init__.py  base.py  heuristic.py  heuristic_guardian.py  pattern.py  pattern_guardian.py  statistical_guardian.py  strict.py
src/cerberus/hub/: __init__.py  coordinator.py
tests/: __init__.py  test_base.py  test_guardians.py  test_hub.py
